; ModuleID = '/home/carl/AnghaBench/linux/net/dsa/extr_dsa2.c_dsa_tree_setup_routing_table.c'
source_filename = "/home/carl/AnghaBench/linux/net/dsa/extr_dsa2.c_dsa_tree_setup_routing_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dsa_switch_tree = type { %struct.dsa_switch** }
%struct.dsa_switch = type { i32 }

@DSA_MAX_SWITCHES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dsa_switch_tree*)* @dsa_tree_setup_routing_table to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dsa_tree_setup_routing_table(%struct.dsa_switch_tree* %0) #0 {
  %2 = alloca %struct.dsa_switch_tree*, align 8
  %3 = alloca %struct.dsa_switch*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.dsa_switch_tree* %0, %struct.dsa_switch_tree** %2, align 8
  store i32 1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %28, %1
  %7 = load i32, i32* %5, align 4
  %8 = load i32, i32* @DSA_MAX_SWITCHES, align 4
  %9 = icmp slt i32 %7, %8
  br i1 %9, label %10, label %31

10:                                               ; preds = %6
  %11 = load %struct.dsa_switch_tree*, %struct.dsa_switch_tree** %2, align 8
  %12 = getelementptr inbounds %struct.dsa_switch_tree, %struct.dsa_switch_tree* %11, i32 0, i32 0
  %13 = load %struct.dsa_switch**, %struct.dsa_switch*** %12, align 8
  %14 = load i32, i32* %5, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds %struct.dsa_switch*, %struct.dsa_switch** %13, i64 %15
  %17 = load %struct.dsa_switch*, %struct.dsa_switch** %16, align 8
  store %struct.dsa_switch* %17, %struct.dsa_switch** %3, align 8
  %18 = load %struct.dsa_switch*, %struct.dsa_switch** %3, align 8
  %19 = icmp ne %struct.dsa_switch* %18, null
  br i1 %19, label %21, label %20

20:                                               ; preds = %10
  br label %28

21:                                               ; preds = %10
  %22 = load %struct.dsa_switch*, %struct.dsa_switch** %3, align 8
  %23 = call i32 @dsa_switch_setup_routing_table(%struct.dsa_switch* %22)
  store i32 %23, i32* %4, align 4
  %24 = load i32, i32* %4, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %27, label %26

26:                                               ; preds = %21
  br label %31

27:                                               ; preds = %21
  br label %28

28:                                               ; preds = %27, %20
  %29 = load i32, i32* %5, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %5, align 4
  br label %6

31:                                               ; preds = %26, %6
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}

declare dso_local i32 @dsa_switch_setup_routing_table(%struct.dsa_switch*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
